[package]
name = "ruGameboy"
version = "0.1.0"
authors = ["yodalee <lc85301@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
minifb = "0.19.1"
num-traits = "0.2"
num-derive = "0.3"
clap = "2.33.3"
